--- a/index.html
+++ b/index.html
@@ -77,6 +77,47 @@
             </div>
         </section> <!--intro-->
 
+        <section class="benefits">
+            <div class="benefits-container">
+                <div class="benefits-container__item">
+                    
+                    <div class="text-container">
+                        <p class="headline">Benefits</p>
+                        <span class="intro-headline">Shaping the future</span>
+                        <p class="title">Eget nunc scelerisque viverra mauris in aliquam. Dignissim sodales ut eu sem integer vitae. 
+                            Libero nunc consequat interdum varius.</p>
+                        <div class="subtitle">
+                            <p>Magna sit amet purus gravida. Sit amet porttitor eget dolor morbi non.</p>
+                            <p> Lectus vestibulum mattis ullamcorper velit sed ullamcorper.</p>
+                            <p>Diam phasellus vestibulum lorem sed risus ultricies tristique nulla. Dui faucibus in ornare quam viverra.</p>
+                            <p>Posuere ac ut consequat semper viverra.</p>
+                        </div>
+                        <button>Learn more</button>
+                    </div> <!--text-conainer-->
+
+                    <div class="image-container">
+                        <div class="image-container__item">
+                            <img src="./assets/img/benefits photo.png" alt="">
+                            <p>Mobile Apps</p>
+                        </div>
+                        <div class="slider-container">
+                            <span>1 / 3</span>
+                            <img class="left" src="./assets/img/left arrow.png" alt="">
+                            <img class="right" src="./assets/img/right arrow.png" alt="">
+                        </div>
+
+                    </div> <!--image-container-->
+
+                </div> <!--benefits-container__item-->
+            </div>
+        </section> <!--benefits-->
+
+        <section class="services">
+            <div class="services-container">
+                
+            </div>
+        </section>
+
     </main>
 
     <footer>
