create services section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     
                     <div class="text-container">
                         <p class="headline">Benefits</p>
-                        <span class="intro-headline">Shaping the future</span>
+                        <span class="benefits-headline">Shaping the future</span>
                         <p class="title">Eget nunc scelerisque viverra mauris in aliquam. Dignissim sodales ut eu sem integer vitae. 
                             Libero nunc consequat interdum varius.</p>
                         <div class="subtitle">
@@ -114,9 +114,49 @@
 
         <section class="services">
             <div class="services-container">
+                <div class="text-container">
+                    <p class="headline">We are Amazing</p>
+                    <span class="services-headline">Our services</span>
+                    <p class="title">Quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna. 
+                        Quam elementum pulvinar etiam non. Eu consequat.</p>
+                </div> <!--text-conainer-->
+
+                <ul>
+                    <li>
+                        <img src="./assets/img/Vector 1.png" alt="">
+                        <span>Webdesign</span>
+                        <p>Tincidunt lobortis feugiat vivamus at augue eget. Risus feugiat in ante metus dictum. Amet aliquam id diam maecenas.</p>
+                    </li>
+                    <li>
+                        <img src="./assets/img/Vector 2.png" alt="">
+                        <span class="pink" >Webdev</span>
+                        <p>Eget nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Eu feugiat pretium nibh ipsum consequat nisl vel pretium. </p>
+                    </li>
+                    <li>
+                        <img src="./assets/img/Vector 3.png" alt="">
+                        <span class="orange" >Marketing</span>
+                        <p>Eu augue ut lectus arcu bibendum at. Pellentesque nec nam aliquam sem et tortor consequat. </p>
+                    </li>
+                    <li>
+                        <img src="./assets/img/Vector 4.png" alt="">
+                        <span class="orange">Marketing</span class="orange">
+                        <p>Id venenatis a condimentum vitae. Magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tortor dignissim convallis aenean et.</p>
+                    </li>
+                    <li>
+                        <img src="./assets/img/Vector 5.png" alt="">
+                        <span>Webdesign</span>
+                        <p>Sollicitudin ac orci phasellus egestas tellus rutrum tellus pellentesque. Malesuada fames ac turpis egestas sed.</p>
+                    </li>
+                    <li>
+                        <img src="./assets/img/Vector 6.png" alt="">
+                        <span class="pink">Webdev</span>
+                        <p>Integer quis auctor elit sed vulputate mi. Semper auctor neque vitae tempus. Vulputate odio ut enim blandit volutpat maecenas volutpat.</p>
+                    </li>
+                </ul>
+                <button>Learn more</button>
                 
             </div>
-        </section>
+        </section> <!--services-->
 
     </main>
 
