--- a/index.html
+++ b/index.html
@@ -158,6 +158,30 @@
             </div>
         </section> <!--services-->
 
+        <section class="testimonial">
+            <div class="testimonial-container">
+                <div class="image-container">
+                    <img src="./assets/img/Faces.png" alt="faces" class="faces">
+                    <img src="./assets/img/testimonials.png" alt="main" class="main">
+                    <img src="./assets/img/quotes.png" alt="quotes" class="quotes">
+                </div> <!--image-container-->
+
+                <div class="text-container">
+                    <div class="testimomial-text">
+                        <button class="prev">
+                            <img src="./assets/img/white arrow.png" alt="">
+                        </button>
+                        <span>Lectus arcu bibendum at varius. Adipiscing diam donec adipiscing tristique.</span>
+                        <button class="next">
+                            <img src="./assets/img/pink arrow.png" alt="">
+                        </button>
+                    </div> <!--testimomial-text-->
+                    <span class="pink">Kerry Johnes</span>
+                    <span>- Some Company</span>
+                </div> <!--text-container-->
+            </div>
+        </section> <!--testimonial-->
+
     </main>
 
     <footer>
