create newsletter section

--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
             </div>
         </section> <!--testimonial-->
 
+        <section class="newsletter">
+
+            <span>Subscribe to our newsletter</span>
+            <p>Cras pulvinar mattis nunc sed blandit.</p>
+
+            <div class="form">
+                <input type="text" value="enter email" class="input">
+                <input type="submit" value="Subscribe" class="submit">
+            </div>
+
+        </section> <!--newsletter-->
+
     </main>
 
     <footer>
