fix newsletter section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
             <div class="form">
                 <input type="text" value="enter email" class="input">
-                <input type="submit" value="Subscribe" class="submit">
+                <button type="submit" class="submit"> Subscribe <img src="./assets/img/Arrow button.png"> </button>
             </div>
 
         </section> <!--newsletter-->
