--- a/index.html
+++ b/index.html
@@ -191,12 +191,64 @@
                 <input type="text" value="enter email" class="input">
                 <button type="submit" class="submit"> Subscribe <img src="./assets/img/Arrow button.png"> </button>
             </div>
-
         </section> <!--newsletter-->
 
     </main>
 
     <footer>
+        <div class="footer-container">
+            <div class="information-block">
+
+                <div class="logo-container">
+                    <span>Lopper</span>
+                    <p>Eu augue ut lectus arcu bibendum at.</p>
+                </div>
+
+                <div class="menu-container">
+                    <span>menu</span>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Servces</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div> <!--menu-container-->
+
+                <div class="service-container">
+                    <span>services</span>
+                    <ul>
+                        <li><a href="#">Lorem</a></li>
+                        <li><a href="#">Ipsum</a></li>
+                        <li><a href="#">Dolor</a></li>
+                        <li><a href="#">Sit Amet</a></li>
+                    </ul>
+                </div> <!--services-container-->
+
+                <div class="contact-us-container">
+                    <span>contact us</span>
+                    <ul>
+                        <li><a href="mailto:contact@lop.com" id="mail">contact@lop.com</a></li>
+                        <li><a href="tel:856693456" id="tel">856 - 693 - 456</a></li>
+                    </ul>
+                </div>
+
+                <div class="follow-us-container">
+                    <span>follow us</span>
+                    <ul>
+                        <li><a href="https://twitter.com/"><img src="./assets/img/twitter.svg" alt=""></a></li>
+                        <li><a href="https://www.facebook.com/"><img src="./assets/img/facebook.png" alt=""></a></li>
+                        <li><a href="https://www.instagram.com/?hl=ru"><img src="./assets/img/insta.png" alt=""></a></li>
+                        <li><a href="https://www.youtube.com/"><img src="./assets/img/youtube.png" alt=""></a></li>
+                        <li><a href="https://medium.com/"><img src="./assets/img/medium.png" alt=""></a></li>
+                    </ul>
+                </div>
+            </div> <!--information-block-->
+
+            <span class="quote">© 2019 Lopper by mariuszdaniel. All right reserved.</span>
+
+        </div>
 
     </footer>
     
