--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header>
-        <div class="header-wrapper">
+        <div class="header-wrapper" id="header">
             <div class="header-line">
                 <span class="logo">Lopper</span>
                 <nav>
-                    <a href="#">Home</a>
+                    <a href="#header">Home</a>
                     <a href="#services">Services</a>
                     <a href="#testimonial">Work</a>
                     <a href="#benefits">About</a>
