--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/laptop.css">
     <link href="https://fonts.googleapis.com/css?family=Noticia+Text:400,400i,700,700i&display=swap" rel="stylesheet">
     <title>Lopper</title>
 </head>
@@ -166,7 +167,7 @@
                 </div> <!--image-container-->
 
                 <div class="text-container">
-                    <div class="testimomial-text">
+                    <div class="testimonial-text">
                         <button class="prev">
                             <img src="./assets/img/pink arrow.png" class="active">
                             <img src="./assets/img/white arrow.png" class="hover">
