--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
                     <img src="./assets/img/phone.png" alt="">
                     <a href="tel: (01) 666 - 693 - 456 ">(01) 666 - 693 - 456</a>
                 </div>
-                <img src="./assets/img/Menu.png" alt="">
+                <div class="hamburger-menu">
+                    <input id="menu__toggle" type="checkbox" />
+                    <label class="menu__btn" for="menu__toggle">
+                      <span></span>
+                    </label>
+                
+                    <ul class="menu__box">
+                        <li><a class="menu__item" href="#header">Home</a></li>
+                        <li><a class="menu__item" href="#services">Services</a></li>
+                        <li><a class="menu__item" href="#testimonial">Work</a></li>
+                        <li><a class="menu__item" href="#benefits">About</a></li>
+                    </ul>
+                  </div>
             </div> <!--header-line-->
 
             <div class="header-container">
