--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/laptop.css">
     <link rel="stylesheet" href="./style/tablet.css">
+    <link rel="stylesheet" href="./style/mobile.css">
     <link href="https://fonts.googleapis.com/css?family=Noticia+Text:400,400i,700,700i&display=swap" rel="stylesheet">
     <title>Lopper</title>
 </head>
